--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
+<style>
+.home {
+  border: none;
+  background-color: #FFE5B4;    
+  text-align: center;
+}
+</style>
+<body>
+<div class="home">
 <h1>Welcome Home</h1>
+</div>  
+</body>
