--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<html>
+<head>
 <style>
 .home {
   border: none;
@@ -5,8 +7,10 @@
   text-align: center;
 }
 </style>
+  </head>
 <body>
 <div class="home">
 <h1>Welcome Home</h1>
 </div>  
 </body>
+</html>
